# workflows

./: pyproject.toml
.github/workflows/: get-readwise-reader-metric.yml  get-readwise-review-metric.yml
scripts/: readwise-daily-review-metric.py  readwise-reader-metric.py
