[tool.poetry]
name = "workflows"
version = "0.1.0"
description = ""
authors = ["Jane Jeon <git@janejeon.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.14"
dlt = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
